# treetable

./: MANIFEST.in  README.md  demo.py  pyproject.toml  setup.py  test.py  treetable.py
treetable/: __init__.py  table.py  text.py
