[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "treetable"
version = "0.2.6"
description = "Helper to pretty print an ascii table with a tree-like structure"
readme = "README.md"
license = {text = "Unlicense license"}
authors = [
    {name = "Alexandre Défossez", email = "alexandredefossez@gmail.com"}
]
requires-python = ">=3.6.0"
dependencies = []
classifiers = [
    "Topic :: Text Processing"
]

[project.urls]
Homepage = "https://github.com/adefossez/treetable"

[tool.setuptools.packages.find]
include = ["treetable*"]